IVYPORTAL-10245 Portal User Example Guide - Fix UI bug on mobile

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/utility.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/utility.css
@@ -281,6 +281,9 @@
   .u-visibility-hidden-xs-down {
     visibility: hidden;
   }
+  .height100{
+  	height:100% !important;
+  }
 }
 
 @media ( min-width : 576px) {
